Add experiment metadata validation rules and description dialogs
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>